--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Basic Online Shop based on NodeJS and MongoDB",
   "main": "app.js",
   "scripts": {
-    "test": "test",
+    "test": "NODE_ENV=test jest --verbose --forceExit",
     "start": "nodemon -e js,ejs,html,css app.js"
   },
   "repository": {
@@ -37,6 +37,8 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "jest": "^29.3.1",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3"
   }
 }
