--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,11 +31,14 @@ jobs:
 
       - name: Install all dependencies
         run: npm install
+        
+      - name: create env file
+        run: |
+          touch .env 
+          echo MONGODB_URI=${{ env.MONGODB_URI }} >> .env 
+          echo MONGODB_DB_NAME=${{ env.MONGODB_DB_NAME }} >> .env 
+          echo SESSION_SECRET=${{ env.SESSION_SECRET }} >> .env
+          echo NODE_ENV=test >> .env
 
       - name: Run Jest Tests
         run: npm run test
-        env:
-          MONGODB_URI: ${{ env.MONGODB_URI }}
-          MONGODB_DB_NAME: ${{ env.MONGODB_DB_NAME }}
-          SESSION_SECRET: ${{ env.SESSION_SECRET }}
-          NODE_ENV: test
