--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "jest --verbose --forceExit",
-    "start": "nodemon -e js,ejs,html,css app.js",
+    "start": "NODE_ENV=development nodemon -e js,ejs,html,css app.js",
     "seed": "node database/seed/index.js"
   },
   "repository": {
@@ -35,6 +35,7 @@
     "express-session": "^1.17.3",
     "mongodb": "^4.13.0",
     "multer": "^1.4.5-lts.1",
+    "stripe": "^11.17.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
