--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "app.js",
   "scripts": {
     "test": "jest --verbose --forceExit",
-    "start": "NODE_ENV=development nodemon -e js,ejs,html,css listen.js",
+    "start-dev": "NODE_ENV=development nodemon -e js,ejs,html,css listen.js",
     "seed": "node database/seed/index.js",
     "seed_prod": "NODE_ENV=production node database/seed/index.js",
-    "listen": "node listen.js"
+    "start": "node listen.js"
   },
   "repository": {
     "type": "git",
