--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/LendiDev/online-shop#readme",
   "dependencies": {
+    "aws-sdk": "^2.1348.0",
     "bcryptjs": "^2.4.3",
     "connect-mongodb-session": "^3.1.1",
     "csurf": "^1.11.0",
@@ -37,6 +38,7 @@
     "express-session": "^1.17.3",
     "mongodb": "^4.14.0",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "stripe": "^11.17.0",
     "uuid": "^9.0.0"
   },
